--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,8 +7,8 @@ on:
       - main
       - 'feature/*'
 env:
-  MONGO_URL: mongodb+srv://${{secrets.MONGO_PASSWORD}}:${{var.MONGO_USERNAME}}@cluster1.enjitsy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-  MONGO_USERNAME: ${{var.MONGO_USERNAME}}
+  MONGO_URL: mongodb+srv://${{secrets.MONGO_PASSWORD}}:${{vars.MONGO_USERNAME}}@cluster1.enjitsy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+  MONGO_USERNAME: ${{vars.MONGO_USERNAME}}
   MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
 jobs:
 
