--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,7 +7,7 @@ on:
       - main
       - 'feature/*'
 env:
-  MONGO_URI: 'mongodb+srv://${{vars.MONGO_USERNAME}}:${{secrets.MONGO_PASSWORD}}@cluster1.enjitsy.mongodb.net/superData'
+  MONGO_URI: "mongodb+srv://${{vars.MONGO_USERNAME}}:${{secrets.MONGO_PASSWORD}}@cluster1.enjitsy.mongodb.net/superData"
   MONGO_USERNAME: ${{vars.MONGO_USERNAME}}
   MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
 jobs:
